address code review feedback on preview throttling, localization and test style